testsuite/tests/ghc-regress/deriving/should_fail/all.T

test('drvfail001', normal, compile_fail, [''])
test('drvfail002', normal, compile_fail, [''])
test('drvfail003', normal, compile_fail, [''])
test('drvfail004', normal, compile_fail, [''])
test('drvfail005', normal, compile_fail, [''])
test('drvfail006', normal, compile_fail, [''])
test('drvfail007', normal, compile_fail, [''])
test('drvfail008', normal, compile_fail, [''])
test('drvfail009', normal, compile_fail, [''])
test('drvfail010', normal, compile_fail, [''])
test('drvfail011', normal, compile_fail, [''])
